fixed spacing of gloss container

--- a/linguistic-examples.css
+++ b/linguistic-examples.css
@@ -1,12 +1,12 @@
 body {
-    counter-reset: example-counter 0;    
+    counter-reset: example-counter 0;
     }
 
 .ex::before {
     counter-increment: example-counter;
     content:"(" counter(example-counter) ") ";
   }
-  
+
 .ab::before {
     counter-increment: ab-counter;
     content: counter(ab-counter, lower-latin) ".";
@@ -21,7 +21,7 @@ body {
     margin-bottom: -1em;
   }
 
- 
+
 
 
 
@@ -34,28 +34,28 @@ body {
          /* margin: 1em 0; */
          margin-left: -2.5em;
   }
-  
+
  ol.sentence {
     display:inline;
     list-style-type: none;
-    padding: 0em;
-    /* margin-top: -2em; */
+    /* padding: 0em; */
+    /* padding-top: -2em; */
   }
-  
+
   ol.sentence li[lang=target-word]{
      /* font-weight:bold; */
      list-style-type: none;
     padding: 0em;
   }
-  
-  
+
+
   ol.sentence li[lang=target-gloss]{
      /* font-family: monospace; */
      list-style-type: none;
     padding: 0;
-  
+
   }
-  
+
   ol.word {
    /* padding: .5em; */
    margin-bottom: .5em;
@@ -65,7 +65,7 @@ body {
    display: inline-block;
    /* padding: 0em; */
   }
-  
+
   p.translation {
     width: 90%;
     float: left;
@@ -74,9 +74,9 @@ body {
     margin-left: 2.5em;
   }
 
-  
+
   /* New */
-  
+
   .example-container {
     /* display: flex;
     flex-direction: row;
@@ -87,7 +87,7 @@ body {
 
   .gloss-example-container {
     counter-reset: ab-counter 0;
-    
+
   }
   .individual-example {
     display: flex;
